# gtfs-structure

./: Cargo.toml
src/: error.rs  gtfs.rs  lib.rs  raw_gtfs.rs
