[package]
description = "Read GTFS (public transit timetables) files"
name = "gtfs-structures"
version = "0.39.1"
authors = ["Tristram Gräbener <tristramg@gmail.com>", "Antoine Desbordes <antoine.desbordes@gmail.com>"]
repository = "https://github.com/rust-transit/gtfs-structure"
license = "MIT"
edition = "2018"

[features]
default = ["reader", "read-url"]
reader = ["bytes", "csv", "itertools", "sha2", "zip"]
read-url = ["reader", "reqwest", "futures"]

[dependencies]
derivative = "2.1"
serde = {version = "1.0", features = ["rc"]}
serde_derive = "1.0"
chrono = "0.4"
thiserror = "1"
rgb = "0.8"

bytes = { version = "1", optional = true }
csv = { version = "1.1", optional = true }
itertools = { version = "0.11", optional = true }
sha2 = { version = "0.10", optional = true }
zip = { version = "0.6", optional = true }

futures = { version = "0.3", optional = true }
reqwest = { version = "0.11", optional = true, features = ["blocking"]}

[dev-dependencies]
serde_json = "1.0"
